# CS5231-miniproj

./: .gitignore  2021-11-19.txt  2021-11-20.txt  2021-11-22-eval.txt  DECLARATION.md  Dockerfile  GENERAL_NOTIFICATIONS.txt  README.md  SID  init_repo.sh  rundocker.sh
solution_mnt/: README.md  bashrc  build.sh  gdbinit  local_tester.sh  main.sh  naive_solution.py  solution.py  solver.py
solution_mnt/angr_solver/: plugin_manager.py  procedure_manager.py  tracefile
solution_mnt/angr_solver/plugins/: __init__.py  memcheck_plugin.py  plugin_base.py
solution_mnt/angr_solver/procedures/: __init__.py  sim_procedures.py
solution_mnt/angr_solver/taint_annos/: __init__.py  seedrange.py  taint_annotation.py
solution_mnt/angr_solver/trace_parser/: parser.py
solution_mnt/dynamorio_tracers/: CMakeLists.txt  README.md  instrace_simple.c  memtrace_simple.c  memval_simple.c  tracer_run.sh  utils.c  utils.h
solution_mnt/naive_solution_utils/: checkrun.sh  gdb_check_valgrind.py  test.py
